# opengl-template

./: CMakeLists.txt  README.md  compile_and_run.txt
assets/shaders/: fragment.glsl  vertex.glsl
include/: shader.h  typedefs.h
src/: main.cpp  shader.cpp
